Fix some misalignment.

--- a/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-v2/standard-agency-hosting/wpcom-plan-selector/style.scss
+++ b/client/a8c-for-agencies/sections/marketplace/hosting-overview/hosting-v2/standard-agency-hosting/wpcom-plan-selector/style.scss
@@ -8,9 +8,13 @@
 }
 
 .wpcom-plan-selector__slider-container {
-	max-width: 800px;
+	max-width: 900px;
 	width: 100%;
 	margin: 0 auto;
+
+	.a4a-slider {
+		margin-inline-start: -93px;
+	}
 }
 
 .wpcom-plan-selector__card {
